Add more kernels! (#132)
* Add more kernels!
* Conditionally skip full image build
* Add test summary
* Update readme

--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -52,15 +52,25 @@ jobs:
         go-version: '1.17'
     - name: Run tests
       run: make run-multikernel-test IMG_FILTER=${{ matrix.kernel_flavor }} ARCH=${{ inputs.architecture }} EVENTSTRACE_PATH=${PWD}/artifacts/bin/EventsTrace
+    - name: Prepare for archival
+      if: always()
+      run: |
+        mv testing/bpf-check-summary.txt results-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt || true
+        mkdir -p logs && mv testing/results logs/${{ matrix.kernel_flavor }}-${{ inputs.architecture }}
     - name: Archive test summary
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: run-summary-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
-        path: testing/bpf-check-summary.txt
+        name: result-summary
+        path: results-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
     - name: Archive individual test results
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: results-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}
-        path: testing/results
+        name: logs
+        path: logs
+    - name: Print summary
+      if: always()
+      run: |
+        echo "Summary results for ${{ matrix.kernel_flavor }}-${{ inputs.architecture }}" >> $GITHUB_STEP_SUMMARY
+        cat results-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt | grep "FAIL\|PASS" | sed s/FAIL:/:x:/g | sed s/PASS:/:white_check_mark:/g >> $GITHUB_STEP_SUMMARY
