Run host isolation tests in GitHub Actions
Completely break free of Jenkins by running host isolation tests in
GitHub actions. The existing jenkins setup was broken anyways and slated
to be moved to the multikernel tester.

As a bonus of moving the host isolation tests to the new test framework,
they're now running on far more kernels than before.

--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -51,7 +51,7 @@ jobs:
       with:
         go-version: '1.17'
     - name: Run tests
-      run: make run-multikernel-test IMG_FILTER=${{ matrix.kernel_flavor }} ARCH=${{ inputs.architecture }} EVENTSTRACE_PATH=${PWD}/artifacts/bin/EventsTrace
+      run: make run-multikernel-test IMG_FILTER=${{ matrix.kernel_flavor }} ARCH=${{ inputs.architecture }} ARTIFACTS_PATH=${PWD}/artifacts
     - name: Prepare for archival
       if: always()
       run: |
