--- a/GPL/Events/CMakeLists.txt
+++ b/GPL/Events/CMakeLists.txt
@@ -30,7 +30,7 @@ ebpf_probe_target(EventProbe
     DEPENDENCIES libbpf vmlinux
     FLAGS ${EVENTS_PROBE_CFLAGS}
     PUBLIC_HEADERS EbpfEventProto.h
-    FILES
+    DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/File/Probe.bpf.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Network/Probe.bpf.c
     ${CMAKE_CURRENT_SOURCE_DIR}/Network/Network.h
