Track the probe source files (#150)
* Instruct cmake to depend on probe sources
* Add more source deps
* cleanup
* Rename FILES to DEPENDS

--- a/GPL/Events/CMakeLists.txt
+++ b/GPL/Events/CMakeLists.txt
@@ -30,5 +30,15 @@ ebpf_probe_target(EventProbe
     DEPENDENCIES libbpf vmlinux
     FLAGS ${EVENTS_PROBE_CFLAGS}
     PUBLIC_HEADERS EbpfEventProto.h
+    DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/File/Probe.bpf.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Network/Probe.bpf.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Network/Network.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Process/Probe.bpf.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/EbpfEventProto.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/EventProbe.bpf.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/PathResolver.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/State.h
     GENSKELETON INSTALL
 )
