--- a/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
+++ b/GPL/HostIsolation/KprobeConnectHook/CMakeLists.txt
@@ -19,5 +19,8 @@ ebpf_probe_target(KprobeConnectHook
     SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c
     DEPENDENCIES libbpf vmlinux
     FLAGS ${KPROBECONNECTHOOK_CFLAGS}
+    DEPENDS
+    ${CMAKE_CURRENT_SOURCE_DIR}/KprobeConnectHook.bpf.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/Kerneldefs.h
     GENSKELETON INSTALL
 )
