Add custom change to ensure the use of fPIC

--- a/contrib/libbpf/src/Makefile
+++ b/contrib/libbpf/src/Makefile
@@ -30,7 +30,7 @@ $(call allow-override,LD,$(CROSS_COMPILE)ld)
 TOPDIR = ..
 
 INCLUDES := -I. -I$(TOPDIR)/include -I$(TOPDIR)/include/uapi
-ALL_CFLAGS := $(INCLUDES)
+ALL_CFLAGS := $(INCLUDES) -fPIC
 
 SHARED_CFLAGS += -fPIC -fvisibility=hidden -DSHARED
 
