--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -31,6 +31,7 @@ jobs:
         sudo apt-get install -y --no-install-recommends \
         gcc-aarch64-linux-gnu \
         libc6-dev-arm64-cross \
+        libcap-dev \
         parallel \
         qemu-system-x86 \
         qemu-system-arm \
