--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,16 @@ on:
         required: true
         type: string
         description: The runner to execute the build on, for example ubuntu-latest
+  workflow_dispatch:
+    inputs:
+      architecture:
+        required: true
+        type: string
+        description: Architecture string, for example aarch64
+      runner:
+        required: true
+        type: string
+        description: The runner to execute the build on, for example ubuntu-latest
 
 jobs:
   build:
