Address review comments

--- a/testing/kernel_builder/Makefile
+++ b/testing/kernel_builder/Makefile
@@ -7,4 +7,4 @@ all:
 	${CONTAINER_ENGINE} run -v ${PWD}:/work ${IMAGE}-new:${TAG}
 
 image:
-	${CONTAINER_ENGINE} build -f Dockerfile.new -t ${IMAGE}-new:${TAG} .
+	${CONTAINER_ENGINE} build -f Dockerfile -t ${IMAGE}-new:${TAG} .
