--- a/testing/kernel_builder/Dockerfile
+++ b/testing/kernel_builder/Dockerfile
@@ -2,10 +2,9 @@ from debian:bullseye
 
 RUN dpkg --add-architecture arm64
 RUN apt-get -y update
-RUN apt-get -y install xz-utils
 RUN apt-get -y install \
         git gcc make libssl-dev bison flex bc libelf-dev python3 \
-        gcc-aarch64-linux-gnu curl dwarves \
+        gcc-aarch64-linux-gnu curl dwarves xz-utils \
         cmake zlib1g libdw1 libdw-dev rsync
 
 RUN git clone https://git.kernel.org/pub/scm/devel/pahole/pahole.git /pahole
