--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -76,13 +76,13 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: result-summary-$${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
+        name: result-summary-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
         path: results-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
     - name: Archive individual test results
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: logs-$${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
+        name: logs-${{ matrix.kernel_flavor }}-${{ inputs.architecture }}.txt
         path: logs
     - name: Print summary
       if: always()
