--- a/.github/workflows/multikernel-tester.yml
+++ b/.github/workflows/multikernel-tester.yml
@@ -39,6 +39,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        persist-credentials: false
     - name: Install packages needed for testing
       run: |
         sudo apt-get update
